fixed overflow css

--- a/client/main.css
+++ b/client/main.css
@@ -58,7 +58,7 @@ nav {opacity:0.7}
 }
 
 .main-container * {
-    overflow: auto;
+    overflow: visible;
 }
 
 li {
